Added LoginScreen. Added POST logics and so on(Now in network package)